--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ Política de devolução segura para produtos de uso clínico</p>
     <p>&copy; 2025 DermaPlus - Todos os direitos reservados.</p>
     <p>Contato: contato@dermaplus.com | (96) 4002-8022</p>
   </footer>
+  <img src="img/produtos/produtos.png">
 
   <script src="script.js"></script>
 </body>
